css/main.css
:root {
  --bs-body-bg: #ffffff;
  --bs-body-bg-rgb: 255, 255, 255;
  --bs-secondary-bg: #eeeef3;
  --bs-tertiary-bg: #dedee8;
  --caption-color: #606060;
  --text-color: #000000;
  --shadow-rgb: 32, 32, 34;
  --theme-invert: 0%;
}

[data-bs-theme="dark"] {
  --bs-body-bg: #202022;
  --bs-body-bg-rgb: 32, 32, 34;
  --bs-secondary-bg: #35353d;
  --bs-tertiary-bg: #3a3a45;
  --caption-color: #818181;
  --text-color: #ffffff;
  --shadow-rgb: 175, 141, 171;
  --theme-invert: 100%;
}

.theme-toggle {
  position: fixed; right: 1em; z-index: 9999;
}

.theme-toggle button {
  background: none;
  border: 0px;
  border-radius: 20px;
  padding: 6px 10px;
  cursor: pointer;
}

.theme-toggle button:hover {
  background-color: var(--bs-secondary-bg);
  transition: background-color 150ms ease-in-out;
}

body {
  padding: 0;
  margin: 0;
  font-family: "Rubik";
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--bs-body-bg);
}

#lrt1 + label, .lrt1 {
  --line-color: #047443;
  --line-text-color: #ffffff;
  --car-color: rgb(20, 205, 119);
}

#lrt2 + label, .lrt2 {
  --line-color: #690dac;
  --line-text-color: #ffffff;
  --car-color: rgb(142, 19, 213);
}

#mrt3 + label, .mrt3 {
  --line-color: #facc2e;
  --line-text-color: #000000;
  --car-color: rgb(255, 200, 0);
}

header.bio {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 60px;
  margin-bottom: 20px;
}

div#bio-info {
  margin-left: 2.5em;
  max-width: 50%;
}

@media screen and (max-width: 680px) {
  header.bio {
    flex-wrap: wrap;
    justify-content: center;
  }

  div#bio-info {
    margin-left: 0;
    max-width: 100%;
    text-align: center;
  }
  
}

footer {
  border-top: 1px solid rgb(210,210,210);
  padding-top: 30px;
  height: 120px;
}

a {
  color: var(--text-color);
}

p {
  letter-spacing: 0.25px;
}

section {
  /* transform: translateY(70px); */
  padding: 40px 0;
  background-color: var(--bs-body-bg);
}

section.projects {

}

section#home {
  
}

section#contact {

}

section.segment {
  border-top: 1px solid var(--bs-border-color);
  padding-top: 40px;
}

hr.modal {
  border-color: #acacac;
}

h1, h2, h3, h4, h5, h6 {
  text-align: center;
}

h1 {
  font-size: 38px;
  font-weight: 500;
  margin-bottom: 24px;
}

h1#greeting {
  text-align: left;
}

@media only screen and (max-width: 370px) {
  h1 {
    font-size: 34px;
  }
}

@media only screen and (max-width: 320px) {
  h1 {
    font-size: 30px;
  }
}

@media screen and (max-width: 680px) {
  h1#greeting {
    text-align: center;
  }
}

div #bio-pic {
  width: auto;   
}

#bio-pic {
  position: relative;
  width: 200px;
  height: 200px;
  object-fit: cover;
  object-position: 0 0px;
  overflow: hidden;
  border-radius: 50%;
}

img#bio-pic  {
  width: 200px;
  height: 200px;
}

.home p {
  text-align: center;
}

.home {
  margin-top: 100px;
  background-color: var(--bs-body-bg);
}

#emailText {
  font-weight: 500;
  height: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
  margin-left: 0px;
  margin-right: -12px;
}

.center-paragraph {
  text-align: center;
  width: 100em;
  max-width: 90%;
  margin: auto;
  margin-bottom: 0.5em;
}

#space-below-paragraph {
  margin-bottom: 1em;
}

div#footer-text p {
  margin-bottom: 5px;
  text-align: center;
}

div.socmed-table a.socmed-icon img {
  width: 16px;
  margin: 12px;
}

div.socmed-table a.socmed-icon p {
  font-size: 16px;
}

footer div.socmed-table a.socmed-icon span {
  height: 10px;
}

img[src$=".svg"] {
  filter: invert(var(--theme-invert));
}

a.hyperlink {
  height: 20px;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 5px;
}

a.hyperlink:hover {
  color: rgb(48,216,112);
  transition: 150ms ease-in-out;
}

nav.navbar {
  width: 100%;
  padding-left: 10%;
  padding-right: 10%;
}

nav.nav-bg {
  background-color: var(--bs-body-bg);
  box-shadow: rgba(var(--bs-body-bg), 0.3) 0px 1px 2px 0px, rgba(var(--bs-body-bg), 0) 0px 1px 3px 2px;
  border-bottom: 1px solid var(--bs-border-color);
}

nav div.navbar-container {
  display: flex;
  justify-content: center;
  margin-left: 20px;
}

nav a.navbar-item {
  margin-left: 40px;
}

nav a {
  font-weight: 500;
  text-decoration: none;
}

nav a:hover {
  color: rgb(48,216,112);
  transform: scale(1.05);
  transition: transform 150ms ease-in-out;
}

span.collapse-arrow {
  display: inline-block;
  width: 0.9em;
  height: 0.9em;
  margin-left: 0.3em;
  background: url('/images/icons/collapse.svg') no-repeat center center;
  background-size: contain;
  filter: invert(var(--theme-invert));
  vertical-align: middle;
  user-select: none;
  cursor: pointer;
  transform-origin: center;
  transition: 0.2s ease-in-out;
}

span.collapse-arrow.closed{
  transform: rotateZ(180deg);
}

div.collapsible-section {
  overflow: hidden;
}

h1.calc-title {
  margin: 0 10 0;
}

h3.external-link-text::after {
  content: "";
  display: inline-block;
  width: 0.9em;
  height: 0.9em;
  margin-left: 0.3em;
  background: url('/images/icons/external.svg') no-repeat center center;
  background-size: contain;
  filter: invert(var(--theme-invert));
  vertical-align: middle;
}

span.beta-indicator {
  position: absolute;
  padding: 4px 6px 4px;
  border-radius: 6px;
}

span.beta-indicator p {
  background-color: #364877;
  color: white;
  text-align: center;
  font-weight: 500;
  font-size: 12px;
}

.gridLinks {
  justify-content: center;
  display: flex;
  width: 100%;
  height: auto;
}

.gridLinks a {
  margin-top: 20px;
  margin-bottom: 20px;
  margin-left: 20px;
  margin-right: 20px;
  display: inline-flex;
}

section#projects div.container {
  margin: 0 auto;
  width: 100%;
  display: grid;
  grid-gap: 2rem;
  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
  padding-left: calc(var(--bs-gutter-x) * .55);
  padding-right: calc(var(--bs-gutter-x) * .55);
}

legend.form-label {
  font-size: var(--bs-body-font-size);
}
/* ... */

